fixed layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,16 @@ body {
   background-color: #f3ba2f;
 }
 
+
+.main {
+  padding: 5rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -107,8 +117,9 @@ a {
   border: 1px solid #f0b5c3;
   border-radius: 30px;
   padding: 10px 10px 10px 25px;
-  max-width: 630px;
-  min-width: 600px;
+  /* max-width: 630px;
+  min-width: 600px; */
+  overflow: hidden;
   width: 100%;
   color: #f3ba2f;
   box-shadow: 0 9px 50px -10px #000;
